--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd /var/www/learnwithamine/html
+            cd /var/www/learnwithamine-site
             git pull origin main
-            sudo chown -R www-data:www-data /var/www/learnwithamine/html
+            sudo chown -R www-data:www-data /var/www/learnwithamine
             sudo systemctl reload nginx
